--- a/src/main/resources/views/Address.xml
+++ b/src/main/resources/views/Address.xml
@@ -4,6 +4,15 @@
   xsi:schemaLocation="http://axelor.com/xml/ns/object-views
   http://axelor.com/xml/ns/object-views/object-views_5.4.xsd">
 
+  <grid model="com.axelor.apps.base.db.Address" title="Address" name="address-grid"
+    extension="true" id="gst-address-grid">
+    <extend target="//field[@name='city']">
+      <insert position="after">
+        <field name="state" title="State" form-view="state-form" grid-view="state-grid"/>
+      </insert>
+    </extend>
+  </grid>
+
   <form model="com.axelor.apps.base.db.Address" title="Address" name="address-form"
     extension="true" id="gst-address-form">
     <extend target="//field[@name='city']">
