--- a/src/main/resources/views/PurchaseOrder.xml
+++ b/src/main/resources/views/PurchaseOrder.xml
@@ -14,6 +14,12 @@
       </insert>
     </extend>
 
+    <extend target="//field[@name='taxNumber']">
+      <replace>
+        <field name="gstin" title="Gst number"/>
+      </replace>
+    </extend>
+
   </form>
 
 </object-views>
